# brainweb

./: .gitignore  .travis.yml  .zenodo.json  MANIFEST.in  README.ipynb  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
brainweb/: __init__.py  utils.py
matlab/andrew_reader_lab_software_interface/: brainweb
matlab/andrew_reader_lab_software_interface/brainweb/: .gitignore  README.ipynb  requirements.txt  utils.py
matlab/andrew_reader_lab_software_interface/brainweb.raws/: .gitignore  README.ipynb  README.md  README.txt  requirements.txt  utils.py
python/: MANIFEST.in  setup.py
python/brainweb/: README.ipynb  README.md  README.rst  __init__.py  setup.py  utils.py
