[bdist_wheel]
universal=1

[flake8]
ignore = E111,E114,W504
exclude = .git,__pycache__,build,dist

[metadata]
name = brainweb
description = BrainWeb-based multimodal models of 20 normal brains
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MPLv2.0
author = Casper da Costa-Luis
author_email = casper.dcl@physics.org
url = https://github.com/casperdcl/brainweb
#bugtrack_url = https://github.com/casperdcl/brainweb/issues
platforms = any
# Trove classifiers
# (https://pypi.python.org/pypi?%3Aaction=list_classifiers)
classifiers =
    Development Status :: 4 - Beta
    Framework :: IPython
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
keywords = pet-mr, volume-rendering, neuroimaging, fdg, mri

[options]
packages = brainweb
install_requires =
    tqdm>=4.42.0
    requests
    numpy
    scikit-image
#tests_require = flake8; nose; coverage
#test_suite = nose.collector

[options.extras_require]
plot = matplotlib
register = dipy
test = docutils; pygments; flake8

#[options.package_data]
#brainweb = LICENCE
